tdf#148432 in LTR UI override the navigator treeview direction for RTL doc

based on the first page directionality

Change-Id: Ifa1a67dd0db53afb125bcea29df83e776f9e65d7